--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
         }
     </style> 
 
-    <head>
-        <h1> Foto accurata di Sardina:</h1>
-    </head>
-
     <body>
         <p>
+            <h1> Foto accurata di Sardina:</h1>
             <img src="immagine.JPG">
+        </p>
+
+        <p>
+            <h1> Ecco un'altra foto di sardina (è quello che succhia):</h1>
+            <img src="immagine2.jpg.JPG">
         </p>
     </body>
 
