--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <p>
             <h1> Ecco un'altra foto di sardina (è quello che succhia):</h1>
-            <img src="immagine2.jpg.JPG">
+            <img src="immagine2.JPG">
         </p>
     </body>
 
